--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://RomainTGitHub.github.io/mon-app-meteo/",
   "name": "mon-app-meteo",
   "private": true,
   "version": "0.0.0",
