--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://RomainTGitHub.github.io/mon-app-meteo/",
-  "name": "mon-app-meteo",
+  "homepage": "https://romaintgithub.github.io/Appmeteo/",
+  "name": "Appmeteo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
