--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "homepage": "https://appmeteo-ktuse8rwv-hinatos-projects.vercel.app/",
+  "homepage": "https://romaintgithub.github.io/Appmeteo/",
   "name": "Appmeteo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "axios": "^1.11.0",
     "react": "^19.1.1",
