--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://appmeteo-ktuse8rwv-hinatos-projects.vercel.app/",
+  "homepage": "https://romaintgithub.github.io/Appmeteo/",
   "name": "Appmeteo",
   "private": true,
   "version": "0.0.0",
