Revert "Update package.json"
This reverts commit d85d4e37141de2ae3508af17f6a70705ef23a75f.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://romaintgithub.github.io/Appmeteo/",
-  "name": "Appmeteo",
+  "homepage": "https://RomainTGitHub.github.io/mon-app-meteo/",
+  "name": "mon-app-meteo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
